--- a/Views/Reparacion/Index.cshtml
+++ b/Views/Reparacion/Index.cshtml
@@ -7,6 +7,7 @@
 <h1>@ViewData["Title"]</h1>
 
 <a asp-action="Create" class="btn btn-primary mb-3">Crear nueva reparación</a>
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#crearReparacionModal">Crear nueva reparación</button>
 
 @if (Model == null || !Model.Any())
 {
