--- a/Views/Reparacion/Index.cshtml
+++ b/Views/Reparacion/Index.cshtml
@@ -16,7 +16,8 @@
 }
 else
 {
-    <table class="table table-bordered table-hover">
+<div class="table-responsive">
+    <table class="table table-bordered table-hover table-striped">
         <thead class="thead-dark">
             <tr>
                 <th>Código Reparación</th>
@@ -26,7 +27,6 @@ else
                 <th>Motocicleta</th>
                 <th>Mecánico</th>
                 <th>Convertido a venta</th>
-                <th>Código asignación permisos</th>
             </tr>
         </thead>
         <tbody>
@@ -40,15 +40,15 @@ else
                     <td>@reparacion.Motocicleta</td>
                     <td>@reparacion.Mecanico</td>
                     <td>@(reparacion.ConvertidoAVenta ? "Sí" : "No")</td>
-                    <td>@reparacion.Codigoasignacionpermisos</td>
                 </tr>
             }
         </tbody>
     </table>
-}
+</div>
 
+}
 <div class="modal fade" id="Create" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
+  <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="exampleModalLabel">Crear Reparación</h5>
