--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Reparacion" asp-action="Index">Reparaciones</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Repa</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Sucursal" asp-action="index">Sucursales</a>
                             </li>
                             
                         </ul>
