--- a/Views/Sucursal/Index.cshtml
+++ b/Views/Sucursal/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Sucursales";
 }
 
-<h1>@ViewData["Title"]</h1>
+<h1>Seleccione una Sucursal</h1>
 
 <div class="table-responsive">
     <table class="table table-bordered table-hover">
